<?xml version="1.0"?>
<package>
  <name>mmwave_mappping_by_zhouhao</name>
  <version>0.1.0</version>
  <description>

     mmwave_mappping_by_zhouhao

  </description>
  <maintainer email="chengyangkj@qq.com">chengyangkj</maintainer>
  <author>chengyangkj</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/chengyangkj/mmwave_mappping_by_zhouhao/issues</url> -->
  <!-- <url type="repository">https://github.com/chengyangkj/mmwave_mappping_by_zhouhao</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

 
</package>
